--- a/_sass/minima/_home.scss
+++ b/_sass/minima/_home.scss
@@ -18,7 +18,7 @@
 // }
 
 .post-link{
-    color:  #757575;
+    color:  #6f6f6f;
     font-weight: 700;
     font-size: 50%;
     letter-spacing: 0px;
@@ -31,11 +31,11 @@
 }
 
 .post-link:visited{
-    color:  #757575;
+    color:  #6f6f6f;
 }
 
 .post-link:hover{
-    color:  #757575;
+    color:  #6f6f6f;
 }
 
 
@@ -101,7 +101,7 @@
 }
 
 .home_post_excerpt {
-    color:  #757575;
+    color:  #6f6f6f;
     font-size: 75%;
     // height: calc(100% - 183px - 10px - 50px);
 }
